feat: Add get method to get all course analysis and add application codes
